--- a/treti.html
+++ b/treti.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>U čtyřlístku</h2>
-    <a href="./fail.html"><img src="./assets/Obrázek s putováním přírodu o výšcxe a šířce 150 px (1).jpeg" alt="" width="150px"><h2>dsf</h2></a>
+    <a href="./fail.html"><img src="./assets/Obrázek s putováním přírodu o výšcxe a šířce 150 px (1).jpeg" alt="" width="150px"></a>
     <a href="./fail.html"><img src="./assets/Obrázek s putováním přírodu o výšcxe a šířce 150 px (2).jpeg" alt="" width="150px"></a>
     <a href="./win.html"><img src="./assets/Obrázek s putováním přírodu o výšcxe a šířce 150 px (3).jpeg" alt="" width="150px"></a>
     <a href="./index.html">zpět</a>
